Prevent squished images in tables (closes #29)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -243,6 +243,11 @@ iframe {
   max-width: 100%;
 }
 
+/* Avoid squished images in tables */
+td img {
+  max-width: unset;
+}
+
 p,
 ul,
 figure {
